--- a/src/Containers/StepsLayout.css
+++ b/src/Containers/StepsLayout.css
@@ -14,7 +14,7 @@
 }
 .StepsLayout p {
   color: #f9f9f9;
-  font-size: 20px;
+  /* font-size: 20px; */
 }
 .buttons {
   display: flex;
@@ -23,7 +23,7 @@
   width: 170px;
   height: 40px;
   margin: 16px;
-  font-size: 26px;
+  /* font-size: 26px; */
   color: #f9f9f9;
   border-radius: 5px;
   border: 2px solid rgb(172, 111, 58);
@@ -59,5 +59,4 @@ select{
 	border: 1px solid rgb(172, 111, 58);
   border-radius: 5px;
 }
- 
- 
+
