--- a/src/components/Title/styles.css
+++ b/src/components/Title/styles.css
@@ -1,8 +1,8 @@
 .Title {
   display: flex;
   align-items: center;
-  color: #f9f9f9;
-  border: 2px solid #f9f9f9;
+  color: #161616;
+  border: 2px solid #161616;
   width: min-content;
   padding: 0 .7rem;
   margin: 0 0 1rem;
