:sparkles: added Footer

--- a/src/Containers/BaseLayout.css
+++ b/src/Containers/BaseLayout.css
@@ -29,6 +29,6 @@ select {
   background-color: white;
   background-size: cover;
   background-position: center;
-  background-image: url('https://images.unsplash.com/photo-1551499779-ee50f1aa4d25?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80');
+  background-image: url('../images/photo-1551499779-ee50f1aa4d25.webp');
 }
  
